// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a provided className to the component 1`] = `
<div>
  <button
    class="my-custom-classname button secondary"
    data-testid="button"
  />
</div>
`;

exports[`renders a Button component 1`] = `
<div>
  <button
    class="button secondary"
  />
</div>
`;

exports[`renders a Button component with React node children 1`] = `
<div>
  <button
    class="button secondary"
  >
    Hello 
    <span
      class="text-red-500"
    >
      world!
    </span>
  </button>
</div>
`;

exports[`renders a Button component with text children 1`] = `
<div>
  <button
    class="button secondary"
  >
    Hello world!
  </button>
</div>
`;
